# KoFEM

./: .deepsource.toml  .gitignore  CLAUDE.md  Cargo.toml  DISCLAIMER.md  README.md  THIRD-PARTY-LICENSES.md  docker-compose.yaml  issues.md  test_face_pick.mjs  test_wall_bracket.mjs  update-prod.sh  upload_wasms.sh
.claude/: agents.md  settings.json  settings.local.json
.claude/hooks/: session-start.sh
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml
access/: Dockerfile  admin.mjs  server.mjs
crates/kofem-core/: Cargo.toml  build.rs
crates/kofem-core/cpp/: mfem_bridge.cpp
crates/kofem-core/include/: mfem_bridge.h
crates/kofem-core/src/: boundary.rs  lib.rs  material.rs
crates/kofem-core/src/boundary/: mod.rs
crates/kofem-core/src/elements/: beam.rs  mod.rs  plane.rs  shell.rs  solid.rs
crates/kofem-core/src/io/: inp.rs
crates/kofem-core/src/material/: elastic.rs  mod.rs
crates/kofem-core/src/mesh/: mod.rs
crates/kofem-core/src/property/: mod.rs
crates/kofem-core/src/solver/: linear.rs  mfem.rs  mod.rs
crates/kofem-core/tests/: inp.rs  pipeline.rs
crates/kofem-geom/: Cargo.toml  build.rs
crates/kofem-geom/cpp/: occt_bridge.cpp
crates/kofem-geom/include/: occt_bridge.h
crates/kofem-geom/src/: lib.rs  occt.rs
crates/kofem-geom/src/geom/: brep.rs  curve.rs  mod.rs  surface.rs
crates/kofem-geom/src/step/: mod.rs  parser.rs  topology.rs
crates/kofem-geom/src/tess/: mod.rs
crates/kofem-geom/tests/: geom.rs  quality.rs  step_parser.rs  tess.rs  topology.rs
crates/kofem-mesh/: Cargo.toml  build.rs
crates/kofem-mesh/cpp/: netgen_bridge.cpp
crates/kofem-mesh/include/: netgen_bridge.h
crates/kofem-mesh/src/: cdt.rs  extrude.rs  geom.rs  lib.rs  netgen.rs  quality.rs  triangulate.rs  types.rs  volume.rs
crates/kofem-mesh/test_files/: new_bracket_2.stp
crates/kofem-py/: Cargo.toml
crates/kofem-py/src/: lib.rs
crates/kofem-wasm/: Cargo.toml
crates/kofem-wasm/src/: lib.rs
docs/: GOALS.md  ROADMAP.md  SPEC.md  STEP_PIPELINE.md  closed-beta.md
docs/ADR/: 0001-rust-wasm-core.md  0002-three-js-renderer.md  0003-mitc4-shell.md
engine/: CMakeLists.txt
engine/cpp/: brepfill_stubs.cpp  cad_io.cpp  cad_io.h  engine.cpp  geometry_cache.cpp  geometry_cache.h  json_util.cpp  json_util.h  mesh_netgen.cpp  mesh_netgen.h  netgen_glue.cpp  netgen_glue.h  solve_mfem.cpp  solve_mfem.h  tessellate.cpp  tessellate.h  wasm_util.cpp  wasm_util.h
examples/inp/: cantilever_chexa8.inp  simple_cantilever.inp
examples/validation/: README.md  REPORT.md  dof-constraint.test.mjs  prescribed-displacement.test.mjs  run.mjs
examples/validation/cases/: axial-bar.mjs  beam-torsion.mjs  cantilever-bending-p2.mjs  cantilever-bending.mjs  cooks-membrane.mjs  index.mjs  plate-with-hole.mjs  shaft-torsion.mjs  surface-pressure.mjs  surface-traction.mjs
examples/validation/lib/: mesh.mjs  solver.mjs
examples/web-examples/: examples.mjs  generate.mjs
python/: pyproject.toml
python/examples/: cantilever_beam.py
python/kofem/: __init__.py
scripts/: build-wasm.sh  docker-build-wasm.sh  fetch-wasm-deps.sh  package-wasm-libs.sh
test_files/: Wall Bracket.stp  box.stp  cone.stp  convert_nist_steps_to_stl.py  convert_steps_to_stl.py  cylinder.stp  elbow.stp  generate_shapes.py  generate_shapes_occ.py  hex_prism.stp  i_beam.stp  l_bracket.stp  l_bracket_w_fillet.step  new_bracket_2.stp  pyramid.stp  quarter_cylinder.stp  stepped_shaft.stp  t_profile.stp  torus_ring.stp  tube.stp  u_channel.stp  wedge.stp
test_files/reference_stl/: Wall Bracket.stl  box.stl  cone.stl  cylinder.stl  elbow.stl  hex_prism.stl  i_beam.stl  l_bracket.stl  l_bracket_w_fillet.stl  new_bracket_2.stl  nist_ctc_01_asme1_ap242-e1.stl  nist_ctc_03_asme1_ap242-e2.stl  nist_ftc_06_asme1_ap242-e2.stl  nist_ftc_07_asme1_ap242-e2.stl  nist_ftc_08_asme1_ap242-e1-tg.stl  nist_ftc_08_asme1_ap242-e2.stl  nist_ftc_09_asme1_ap242-e1.stl  nist_ftc_10_asme1_ap242-e2.stl  nist_ftc_11_asme1_ap242-e2.stl  nist_stc_06_asme1_ap242-e3.stl  nist_stc_07_asme1_ap242-e3.stl  nist_stc_08_asme1_ap242-e3.stl  nist_stc_09_asme1_ap242-e3.stl  nist_stc_10_asme1_ap242-e2.stl  pyramid.stl  stepped_shaft.stl  t_profile.stl  torus_ring.stl  tube.stl  u_channel.stl  wedge.stl
tests/fixtures/: gen_box.py
web/: .dockerignore  .nycrc.json  .prettierignore  Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  playwright.capture.config.ts  playwright.config.ts  playwright.docker.config.ts  playwright.video.config.ts  tsconfig.json  vite.config.ts
web/app/: index.html
web/docker-entrypoint.d/: 40-kofem-lock.sh  40-kofem-mode.sh
web/examples/: index.html
web/public/: lock-state.js  mode-state.js
web/public/beta/: index.html
web/public/examples/: axial-bar.vtu  beam-torsion.vtu  cantilever-beam.vtu  cooks-membrane.vtu  examples.json  plate-with-hole.vtu
web/public/tutorial/: walkthrough.webm
web/screenshots/: .gitignore
web/scripts/: README.md  coverage-dead-code.ts  generate-mesh-report.ts  post-mesh-report-to-slack.ts  record-walkthrough.ts  upload-to-slack.ts
web/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
web/src/components/bc/: FacePickPanel.module.css  FacePickPanel.tsx
web/src/components/geometry/: GeometryDialog.module.css  GeometryDialog.tsx
web/src/components/panel/: LeftPanel.module.css  LeftPanel.tsx
web/src/components/properties/: PropertiesPanel.module.css  (+1 more)
web/src/lib/: analysisFile.ts  facePick.ts  generateReport.ts  meshFromBox.ts  modelDisplay.ts  parseAbaqus.ts  resultField.ts  version.ts
web/src/store/: modelStore.ts
web/src/workers/: sharedWorker.ts  solver.worker.ts
web/tests/: cantilever-solve.spec.ts  componentwise-loads.spec.ts  coverage.ts  example-load.spec.ts  landing.spec.ts  mesh-report.spec.ts  moment-loads.spec.ts  production-smoke.spec.ts  remesh.spec.ts  save-load.spec.ts  screenshot.spec.ts  showcase.spec.ts  solve.spec.ts  test_face_pick.mjs  test_wall_bracket.mjs  tutorial-capture.spec.ts  tutorial-video.spec.ts  wasm-unit.spec.ts
web/tests/fixtures/: app.ts  cantilever.ts  cursor.ts
(+26 files in other folders)
