[workspace]
resolver = "2"
members = [
    "crates/kofem-core",
    "crates/kofem-geom",
    "crates/kofem-mesh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Michael Kofler"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
kofem-core = { path = "crates/kofem-core" }
kofem-mesh = { path = "crates/kofem-mesh" }
kofem-geom = { path = "crates/kofem-geom" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"

[profile.release]
opt-level = 3
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = "z"
