[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "kofem"
version = "0.1.0"
description = "Python interface for KoFEM finite element solver"
authors = [{ name = "Michael Kofler" }]
requires-python = ">=3.9"
dependencies = []

[tool.maturin]
manifest-path = "../crates/kofem-py/Cargo.toml"
python-source = "python"
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = ["numpy", "matplotlib", "jupyter", "pytest"]

[tool.uv]
# uv is the package manager for this project
# Setup: uv sync --extra dev
# Build native extension: uv run maturin develop
