[package]
name = "kofem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MFEM-backed FEM solver core for KoFEM"

[features]
default = ["std"]
std = []

[dependencies]
kofem-mesh = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
cc = "1"
