[package]
name = "kofem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core FEM types and solver trait for KoFEM"

[dependencies]
kofem-mesh = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
