[package]
name = "kofem-geom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OCCT-based geometry import and tessellation for KoFEM (STEP, IGES)"

[dependencies]
kofem-mesh = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

[build-dependencies]
cc = "1"
