[package]
name = "kofem-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Volumetric mesh types and Netgen-based quality meshing for KoFEM"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
cc = "1"
