[package]
name = "kofem-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for kofem-core via PyO3"

[lib]
name = "kofem"
crate-type = ["cdylib"]

[dependencies]
kofem-core = { workspace = true }
kofem-mesh = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
