[package]
name = "kofem-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for the KoFEM pipeline (OCCT → Netgen → MFEM)"

# IMPORTANT: the WASM target for this crate is wasm32-unknown-emscripten, NOT
# wasm32-unknown-unknown.  Build with:
#
#   OCCT_WASM_ROOT=...  NETGEN_WASM_ROOT=...  MFEM_WASM_ROOT=...
#   cargo build --target wasm32-unknown-emscripten --release
#
# See scripts/build-wasm.sh for the full build procedure.

[lib]
crate-type = ["cdylib"]

[dependencies]
kofem-core = { workspace = true, features = ["std"] }
kofem-mesh = { workspace = true }
kofem-geom = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
